[package]
name = "notifme"
version = "0.1.0"
edition = "2021"
description = "A simple notify-send send tool"
license-file = "LICENSE" 
repository = "https://github.com/taishingi/notifme"
categories = ["development-tools"]
keywords = ["notify-send", "notif"]
authors = ["Willy Micieli"]
readme = "README.md"
documentation = "https://docs.rs/notifme/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
